--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,38 @@
+<mat-toolbar color="accent">
+  <span>Wie betaald Wie</span>
+  <span class="toolbar"></span>
+</mat-toolbar>
+
 <form [formGroup]="deelnemerForm" (ngSubmit)="onSubmit()">
 
   <div class="form-group">
-    <input
-      type="text"
-      id="naam"
-      placeholder="naam"
-      formControlName="naam"
-      class="form-control">
+    <mat-form-field class="full-width">
+      <input matInput
+        placeholder="Naam"
+        formControlName="naam">
+    </mat-form-field>
+    <mat-error>
+      <span *ngIf="!deelnemerForm.get('naam').valid && deelnemerForm.get('naam').touched">Oeps.</span>
+    </mat-error>
 
-    <input
-      type="text"
-      id="inleg"
-      placeholder="inleg"
-      formControlName="inleg"
-      class="form-control">
+    <mat-form-field class="full-width">
+      <input matInput
+        placeholder="Inleg"
+        formControlName="inleg">
+    </mat-form-field>
+    <mat-error>
+      <span *ngIf="!deelnemerForm.get('inleg').valid && deelnemerForm.get('inleg').touched">Bijvoorbeeld '10.35'</span>
+    </mat-error>
   </div>
 
-  <button
+  <button mat-button
     [disabled]="!deelnemerForm.valid"
     class="btn btn-primary center-block"
     type="submit">
     Add
   </button>
 
-  <button
+  <button mat-button
     [disabled]="deelnemers.length===0"
     (click)="onClearDeelnemers()">
     Opnieuw
@@ -32,20 +41,26 @@
 </form>
 
 <!-- Display deelnemers -->
-<div *ngIf="deelnemers">
+<div *ngIf="deelnemers.length > 0">
+  <h2>Wie heeft wat betaald</h2>
   <ul>
     <li *ngFor="let deelnemer of deelnemers">
-      {{deelnemer.name}} heeft {{deelnemer.inleg | currency:'EUR'}} Euro betaald
+      {{deelnemer.name}} heeft {{deelnemer.inleg | currency:'EUR'}} betaald
     </li>
   </ul>
 </div>
 
+<div *ngIf="kasboek">
+  Totaal is verbrast voor {{kasboek.totaal | currency:'EUR'}}
+</div>
+
 <!--Display kasboek-->
 <div *ngIf="kasboek">
-  Totaal is verbrast voor {{kasboek.totaal | currency:'EUR'}} Euro
+  <h2>De betaalverzoekjes</h2>
+
   <ul>
     <li *ngFor="let item of kasboek.items">
-      {{item.van}} betaald {{item.naar}} {{item.bedrag | currency:'EUR'}} Euro
+      {{item.van}} betaald {{item.naar}} {{item.bedrag | currency:'EUR'}}
     </li>
   </ul>
 </div>
